--- a/Assigment1.Rmd
+++ b/Assigment1.Rmd
@@ -21,8 +21,22 @@ The presenter Benedict Witzenberger describes in the video how he is doing journ
 
 
 
-
 # Analyzing Formula 1 results in R 
 Thomas Hütter, a Formula 1 fan like me, visualized the 2016 Formula 1 race results using R in his work. In this study, Thomas Hütter aimed to compare the performance of pilots based on the scores they received in Formula 1 races in 2016, and filtered the race scores of the top 9 pilots to make it better to visualize the data because there is so much race data.Although Hütter used the data of 9 pilots to make the data easier to visualize, it became difficult to analyze all the data when he plotted it in a single chart using the ggplot2 package. Each race driver's performance during the year has become more detailed in the graphics created separately, and  it was revealed that Nico Rosberg and Lewis Hamilton are the most stable pilots, as well as Daniel Ricciardo and Max Verstappen got at least 1 point at each race.
 
 [Analyzing Formula 1 results in R](https://www.sqlservercentral.com/articles/analyzing-formula-1-results-in-r)
+
+# Tennis Grand Slam Tournaments Champions Basic Analysis
+Giorgio Garziano, an engineer and data scientist in Italy, studied Grand Slam men's championship data between 1877 and 2017, which he obtained from ESPN, one of the world's leading sports channels.This study aimed to determine whether there is an increase in the number of Grand slam champions over time, the probability of a player winning a grand slam more than a certain number, and the distribution of the number of grand slam winners. Using packages such as extremevalues, dplyr, knitr and ggplot2 for data analysis , Garziano analyzed that there were 166 different Grand Slam winners in 141 years, with fewer Grand Slams being played in the first and second world wars. Garziano, who first drew the data and then the log version of the data, then manipulated the data by showing the years the players last won a Grand Slam. Garziano, who fit the data into the log normal distribution, has identified Roger Federer and Rafael Nadal as outliers.The author, who carried out regression analysis, said that as the present day approached, the number of new Grand Slam winners increased and there was a positive correlation between the number of new Grand Slam winners over time.
+
+[Tennis Grand Slam Tournaments Champions Basic Analysis](https://www.sqlservercentral.com/articles/analyzing-formula-1-results-in-r)
+
+# Scrape data from web pages
+In this article, kan Nishida explains how we can retrieve data from web pages that are not shared as files from csv,excel or other format. The rvest package makes it easy to extract data from websites that are also problematic in R, Phyton or other programming languages. One can use the rvest package to extract the data in a specific part of an html document. To do this, Nashida specifies that we can use the SelectorGadget chrome extension to extract the portion of data that we want to import in the html file.
+
+
+
+[Scrape data from web pages](https://blog.exploratory.io/scrape-data-from-web-pages-50e45b2b150a)
+
+
+
