--- a/Assigment1.Rmd
+++ b/Assigment1.Rmd
@@ -2,7 +2,14 @@
 title: "Assignment1:RMarkdown Homework"
 author: "Süheyla Şeker"
 date: "04/08/2020"
-output: html_document
+output: 
+  html_document:
+          toc: true
+          toc_depth: 3
+          toc_float: true
+          number_sections: true
+          theme: journal
+
 ---
 
 ```{r setup, include=FALSE}
