--- a/Assignment2.Rmd
+++ b/Assignment2.Rmd
@@ -5,6 +5,10 @@ date: "18/08/2020"
 output: 
  html_document:
   toc: true
+  toc_depth: 3
+  toc_float: true
+  number_sections: true
+  theme: journal
 ---
 
 ```{r setup, include=FALSE}
