--- a/Assigment1.Rmd
+++ b/Assigment1.Rmd
@@ -36,7 +36,7 @@ The presenter ***Benedict Witzenberger*** describes in the video how he is doing
 # Tennis Grand Slam Tournaments Champions Basic Analysis
 ***Giorgio Garziano***, an engineer and data scientist in Italy, studied Grand Slam men's championship data between 1877 and 2017, which he obtained from ESPN, one of the world's leading sports channels.This study aimed to determine whether there is an increase in the number of Grand slam champions over time, the probability of a player winning a grand slam more than a certain number, and the distribution of the number of grand slam winners. Using packages such as **extremevalues**, **dplyr**, **knitr** and **ggplot2** for data analysis ,***Garziano*** analyzed that there were 166 different Grand Slam winners in 141 years, with fewer Grand Slams being played in the first and second world wars. ***Garziano***, who first drew the data and then the log version of the data, then manipulated the data by showing the years the players last won a Grand Slam. ***Garziano***, who fit the data into the log normal distribution, has identified Roger Federer and Rafael Nadal as outliers. The author, who carried out regression analysis, said that as the present day approached, the number of new Grand Slam winners increased and there was a positive correlation between the number of new Grand Slam winners over time.
 
-[Tennis Grand Slam Tournaments Champions Basic Analysis](https://www.sqlservercentral.com/articles/analyzing-formula-1-results-in-r)
+[Tennis Grand Slam Tournaments Champions Basic Analysis](https://datascienceplus.com/tennis-grand-slam-tournaments-champions-basic-analysis/)
 
 # Scrape data from web pages
 In this article, ***Kan Nashida*** explains how we can retrieve data from web pages that are not shared as files from csv,excel or other format. The **rvest** package makes it easy to extract data from websites that are also problematic in R, Phyton or other programming languages. One can use the rvest package to extract the data in a specific part of an html document. To do this, ***Nashida*** specifies that we can use the SelectorGadget chrome extension to extract the portion of data that we want to import in the html file. First we can use the **html_node()** and then **html_node()** functions to extract the data from the table and convert it to dataframe.
